Fix video on mobile

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1188,7 +1188,8 @@ html {
   img {
     border-radius: 50%;
     object-fit: cover;
-    height: 150px;
+    width: 175px;
+    height: 175px;
   }
 }
 
